# PrismEngine

./: .clang-format  .gitignore  CMakeLists.txt  build.bat  build.sh  run.sh  setup.bat
dependencies/: CMakeLists.txt
dependencies/ImGuizmo/: CMakeLists.txt  ImGuizmo.h
dependencies/imgui/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/components/: CMakeLists.txt
src/components/public/components/: camera.hpp  fps_camera_control.hpp  fps_motion_control.hpp  mesh.hpp  tags.hpp  transform.hpp
src/context/: CMakeLists.txt  context.cpp
src/context/public/context/: context.hpp
src/controllers/: CMakeLists.txt  window_controller.cpp
src/controllers/public/: window_controller.hpp
src/controllers/public/controllers/: window_controller.hpp
src/events/: CMakeLists.txt
src/events/public/events/: move_events.hpp  window_resize_event.hpp
src/loaders/: CMakeLists.txt  glad_loader.cpp  imgui_loader.cpp  mesh_loader.cpp  shader_loader.cpp  window_loader.cpp
src/loaders/public/: glad_loader.hpp  imgui_loader.hpp  shader_loader.hpp
src/loaders/public/loaders/: glad_loader.hpp  imgui_loader.hpp  mesh_loader.hpp  shader_loader.hpp  window_loader.hpp
src/managers/: CMakeLists.txt  scene_draw_systems_manager.cpp  scene_update_systems_manager.cpp
src/managers/public/managers/: scene_draw_systems_manager.hpp  scene_update_systems_manager.hpp
src/models/: CMakeLists.txt
src/resources/: CMakeLists.txt  common_resource.cpp  imgui_resource.cpp  mesh_resource.cpp  scene.cpp  shader_resource.cpp
src/resources/public/resources/: common_resource.hpp  context_resources.hpp  imgui_resource.hpp  mesh_resource.hpp  resource.hpp  scene.hpp  shader_resource.hpp
src/shaders/: CMakeLists.txt  basic.frag  basic.vert
src/systems/: CMakeLists.txt  camera_creation_system.cpp  common_uniform_update_system.cpp  event_poll_system.cpp  fps_motion_control_system.cpp  gizmo_drawing_system.cpp  imgui_drawing_system.cpp  input_control_system.cpp  mesh_drawing_system.cpp  present_system.cpp  screen_clearing_system.cpp  ui_drawing_system.cpp
src/systems/public/systems/: camera_creation_system.hpp  common_uniform_update_system.hpp  event_poll_system.hpp  fps_motion_control_system.hpp  gizmo_drawing_system.hpp  imgui_drawing_system.hpp  input_control_system.hpp  mesh_drawing_system.hpp  present_system.hpp  screen_clearing_system.hpp  ui_drawing_system.hpp
src/ui/: CMakeLists.txt  camera_selection_ui.cpp  camera_settings_ui.cpp  main_dock_ui.cpp  menu_bar_ui.cpp  scene_hierarchy_ui.cpp
src/ui/public/ui/: camera_selection_ui.hpp  camera_settings_ui.hpp  main_dock_ui.hpp  menu_bar_ui.hpp  scene_hierarchy_ui.hpp
src/utils/: CMakeLists.txt
src/utils/public/utils/: opengl_debug.hpp
